--- a/react-front/web-api-front/src/App.css
+++ b/react-front/web-api-front/src/App.css
@@ -14,14 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
+  width: 100%;
+  text-align: center;
+}
+
+.navbar {
+  width: 100%; 
+}
+
+.navbar-nav {
+  margin-right: 100px; 
+  margin-left: 100px;
 }
 
 .App-link {
