add list of roles & delete function

--- a/react-front/web-api-front/src/App.css
+++ b/react-front/web-api-front/src/App.css
@@ -40,3 +40,19 @@
     transform: rotate(360deg);
   }
 }
+
+td {
+  white-space: pre-line;
+}
+
+.delete-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  color: red;
+}
+
