--- a/react-front/web-api-front/src/App.css
+++ b/react-front/web-api-front/src/App.css
@@ -50,9 +50,88 @@ td {
   border: none;
   padding: 0;
   cursor: pointer;
+  margin-right: 15px;
+}
+
+.update-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .delete-button:hover {
   color: red;
 }
 
+.update-button:hover {
+  color: blue;
+}
+
+.list-container {
+  position: relative;
+}
+
+.add-button-container {
+  position: absolute;
+  top: 10;
+  bottom: 10;
+  right: 0;
+  margin-right: 30px;
+  display: inline-block;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.table {
+  margin-top: 80px;
+}
+
+.add-button {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  color: white;
+  background-color: #007bff;
+  border: none;
+  border-radius: 10px;
+}
+
+.add-button:hover {
+  background-color: #0056b3;
+}
+
+.add-button:hover svg {
+  color: white;
+}
+
+.form-control {
+  max-width: 300px;
+  min-width: 300px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;  
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+
+.btn-primary {
+  margin-right: 10px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  align-items: center;
+}
+
+.form-btn-group {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
