--- a/react-front/web-api-front/src/App.css
+++ b/react-front/web-api-front/src/App.css
@@ -51,7 +51,6 @@ td {
   border: none;
   padding: 0;
   cursor: pointer;
-  margin-right: 15px;
 }
 
 .update-button {
@@ -60,7 +59,10 @@ td {
   border: none;
   padding: 0;
   cursor: pointer;
-  /*margin-right: 15px;*/
+}
+
+.left-15 {
+  margin-left: 15px;
 }
 
 .delete-button:hover {
