add other tables display

--- a/angular-front/web-api/src/app/app.component.html
+++ b/angular-front/web-api/src/app/app.component.html
@@ -7,7 +7,7 @@
         <a class="nav-item nav-link" routerLink="/api/roles">Roles</a>
         <a class="nav-item nav-link" routerLink="/api/request_statuses">Request Statuses</a>
         <a class="nav-item nav-link" routerLink="/api/payments">Payments</a>
-        <a class="nav-item nav-link" routerLink="/api/credit_type">Credit Types</a>
+        <a class="nav-item nav-link" routerLink="/api/credit_types">Credit Types</a>
         <a class="nav-item nav-link" routerLink="/api/credit_requests">Credit Requests</a>
         <a class="nav-item nav-link" routerLink="/api/credits">Credits</a>
       </div>
