--- a/angular-front/web-api/src/app/role.list/role.list.component.html
+++ b/angular-front/web-api/src/app/role.list/role.list.component.html
@@ -6,7 +6,7 @@
         <fa-icon [icon]="faPlus"></fa-icon> Add Role
       </a>
     </div>
-    <table class="table table-striped" aria-describedby="RoleTable">
+    <table class="table table-striped" aria-describedby="RoleTable" aria-hidden="true">
       <thead>
         <tr>
           <td>Role Id</td>
