--- a/angular-front/web-api/src/app/user.list/user.list.component.html
+++ b/angular-front/web-api/src/app/user.list/user.list.component.html
@@ -6,7 +6,7 @@
         <fa-icon [icon]="faPlus"></fa-icon>   Add User
       </a>
     </div>
-    <table class="table table-striped" aria-describedby="UserTable">
+    <table class="table table-striped" aria-describedby="UserTable" aria-hidden="true">
       <thead>
       <tr>
         <td>User Name</td>
